# rpg-godo-2003

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
demo/: .gitignore  custom.py  default_bus_layout.tres  icon.png.import  icon.svg.import  project.godot  stripped.gdbuild
demo/addons/: limbo_console.cfg
demo/addons/easy_transitions/: autoload.tres  icon.png.import  plugin.cfg  plugin.gd  presets.gd  transition.gd  transition.gdshader  transition.tscn
demo/addons/easy_transitions/transition_settings/: settings_icon.png.import  transition_settings.gd  transition_tween.gd  twen_icon.png.import
demo/addons/limbo_console/: command_entry.gd  console_options.gd  limbo_console.gd
demo/addons/limbo_console/res/: default_theme.tres
demo/cogs/: audio_output.gd  chat_overlay.gd  debug.gd  game_texture.gd  logger.gd  player.gd  setup_screen.gd  toolbar.gd
demo/cogs/multiplayer/: easy_client_steam.gd  easy_connection.gd  easy_mp_handler.gd  easy_multiplayer.gd  easy_server.gd  easy_server_steam.gd  events.gd
demo/cogs/multiplayer/sender/: sender.gd
demo/cogs/multiplayer/sender/impl/: client.gd  server.gd
demo/cogs/steamworks/: steamworks.gd
demo/cogs/ui/: chat_overlay.gd  host_options.gd  ingame_settings_screen.gd  lobby_browser.gd  lobby_browser_item.gd  notification.gd  notificationman.gd  toolbar.gd  ui_theme_updater.gd
demo/resources/: 16x16.png.import  RM2000.ttf.import  borders_texture.tres  borders_texture_no_margin.tres  chat-off.png.import  chat-on.png.import  chat_stylebox.tres  chat_stylebox_focus.tres  close16x.png.import  close16xbevel.png.import  fullscreenv232x.png.import  orchidmantis_system_celestial.png.import  reconnect-off.png.import  reconnect.png.import  sys_gradient.tres  system_graphic_gradient_tex.tres  theme.tres  theme_outlined_panel.tres
demo/resources/img/: chat-off.png.import  chat-on-flat.png.import  chat-on.png.import  close16x.png.import  close16xbevel.png.import  cog32x.png.import  fullscreenv232x.png.import  orchidmantis_system_celestial.png.import  reconnect-off.png.import  reconnect.png.import  screenshot32x.png.import
demo/scenes/: chat_message.tscn  host_options.tscn  ingame_settings.tscn  lobby_browser.tscn  lobby_browser_item.tscn  main.tscn  notification.tscn
gdextension/src/: register_types.cpp  register_types.h  rpgmaker_player.cpp  rpgmaker_player.h
ynoengine-master/: CMakeLists.txt
ynoengine-master/src/: baseui.cpp  filefinder_rtp.cpp  filesystem_root.cpp  game_map.cpp  input_buttons_desktop.cpp  output.cpp  player.cpp  scene_logo.cpp  scene_save.cpp  scene_title.cpp  web_api.cpp
ynoengine-master/src/multiplayer/: connection.h  game_multiplayer.cpp  game_multiplayer.h  mp_callbacks.h  yno_connection.cpp
ynoengine-master/src/platform/godot/: audio.cpp  audio.h  ui.cpp  ui.h
